# TicketSystem-2021

./: Back-end Logic development document.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TA.md  api_doc.md  cmake_install.cmake  code.cbp
front/: package-lock.json
front/css/: index.css  login.css  style.css
front/html/: admin.html  debug.html  index.html  login.html  person.html  search.html
front/js/: check_login.js  function_pool.js
front/php/: add_train.php  add_user.php  buy_ticket.php  debug.php  delete_train.php  function_pool.php  login.php  logout.php  modify_profile.php  query_order.php  query_pri.php  query_profile.php  query_ticket.php  query_train.php  query_transfer.php  refund_ticket.php  release_train.php  sign.php
front/std_code/: cmake_install.cmake  socket_code  start.sh
front/std_code/db/: allcachedmanager.hpp
front/std_code/lib/: bst.hpp  hashtable.hpp  mytools.hpp  timetype.hpp
front/std_code/src/: cmdprocessor.hpp  systemcore.hpp  systemcore_ret_string.hpp
src/: ManagementSystem.cpp  ManagementSystem.h  Train.cpp  Train.h  TrainManager.cpp  TrainManager.h  User.cpp  User.h  UserManager.cpp  UserManager.h  base.h  cmd.hpp  main.cpp
src/include/: BPlusTree.h  ErrorMessage.h  FileStorage.h  HashMap.cpp  HashMap.h  MyString.hpp  STL.h  StorageManger.h  StoragePool.h  cache.hpp  multiBpt.h  separator.cpp  separator.h  vector.h
src/include/include/: FileStorage.h  MyString.hpp  StoragePool.h
src/include/test_bpt/: right.txt  run.py  test_bpt.cpp
std_code/: cin_code  restart.sh
std_code/src/: main.cpp  systemcore.hpp
ticketsystem使用说明/: system使用说明.md
